' Design pattern — Strategy.
'
' ONE family, not the three the system has. Stacked, the three families made a
' staircase that drifted right across the page — each family started a column
' of its own — and the reader had to work out that the three groups were the
' same shape repeated. One family drawn properly says it once; the prose names
' the other two and what each is for.
'
' STT is the family chosen because it is the one with three live
' implementations, so the interchangeability is visible rather than asserted.
'
' The caller is in the figure on purpose: Strategy is about who does NOT know
' the implementation, and without the caller the diagram is just an interface
' hierarchy.
@startuml
!include _style.puml
!include _pattern-style.puml

class "حلقة المساعد الحيّ" as CALLER

interface SpeechToText <<STT_PROVIDER>> {
  + transcribe(audio)
}

class GroqSpeechToText
class GeminiSpeechToText
class FasterWhisperSpeechToText

CALLER --> SpeechToText : تعرف المنفذ وحده

SpeechToText <|.. GroqSpeechToText
SpeechToText <|.. GeminiSpeechToText
SpeechToText <|.. FasterWhisperSpeechToText
@enduml
